--- a/.gitignore
+++ b/.gitignore
@@ -20,11 +20,15 @@ target/
 *.iml
 *.ipr
 
-### VS Code ###
+# VS Code #
 .vscode/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# System Files
+.DS_Store
+Thumbs.db
 
 # Exceptions
 !.mvn/wrapper/maven-wrapper.jar
