--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -13,12 +13,12 @@
     <version>0.0.1</version>
 
     <dependencies>
-<!--        <dependency>
+        <dependency>
             <groupId>com.arexe</groupId>
             <artifactId>frontend</artifactId>
             <version>${project.version}</version>
             <scope>runtime</scope>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
