--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -15,7 +15,7 @@
     <build>
         <resources>
             <resource>
-                <directory>./dist/lmatic</directory>
+                <directory>./dist/frontend</directory>
                 <targetPath>static</targetPath>
             </resource>
         </resources>
