--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
     <modules>
         <module>backend</module>
-<!--        <module>frontend</module>-->
+        <module>frontend</module>
     </modules>
 
     <build>
