--- a/pom.xml
+++ b/pom.xml
@@ -3,26 +3,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.6.RELEASE</version>
-        <relativePath/>
-    </parent>
+    <groupId>com.arexe</groupId>
+    <artifactId>link-matic</artifactId>
+    <version>0.0.1</version>
+    <name>link-matic</name>
+    <description>link-matic project</description>
     <packaging>pom</packaging>
 
-    <groupId>com.arexe</groupId>
-    <artifactId>lmatic</artifactId>
-    <version>0.0.1</version>
-    <name>lmatic</name>
-    <description>link-matic project</description>
-
-    <properties>
-        <java.version>11</java.version>
-    </properties>
-
     <modules>
-        <module>backend</module>
+        <module>auth</module>
+        <module>lmatic</module>
         <module>frontend</module>
     </modules>
 
