--- a/lmatic/pom.xml
+++ b/lmatic/pom.xml
@@ -44,6 +44,12 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+
         <!-- Data -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
