--- a/lmatic/src/main/resources/application.yml
+++ b/lmatic/src/main/resources/application.yml
@@ -5,3 +5,9 @@ spring:
   datasource:
     username: sa
     url: jdbc:h2:mem:testdb
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8083/auth/realms/lmatic
+          jwk-set-uri: http://localhost:8083/auth/realms/lmatic/protocol/openid-connect/certs
